--- a/practica3_blog/build.gradle
+++ b/practica3_blog/build.gradle
@@ -13,5 +13,7 @@ dependencies {
     compile "com.sparkjava:spark-core:2.5"
     compile "org.slf4j:slf4j-simple:1.7.21"
     compile group: 'com.h2database', name: 'h2', version: '1.3.176'
+    compile "org.hibernate:hibernate-core:5.2.0.Final"
+    compile 'org.hibernate:hibernate-entitymanager:5.1.0.Final'
     compile group: 'com.sparkjava', name: 'spark-template-freemarker', version: '2.0.0'
 }
